--- a/src/assets/icomoon/style.css
+++ b/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xybyka');
-  src:  url('fonts/icomoon.eot?xybyka#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xybyka') format('truetype'),
-    url('fonts/icomoon.woff?xybyka') format('woff'),
-    url('fonts/icomoon.svg?xybyka#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?e9hpzt');
+  src:  url('fonts/icomoon.eot?e9hpzt#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?e9hpzt') format('truetype'),
+    url('fonts/icomoon.woff?e9hpzt') format('woff'),
+    url('fonts/icomoon.svg?e9hpzt#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,9 +25,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cube:before {
+  content: "\e901";
+}
+.icon-3d:before {
+  content: "\e901";
+}
+.icon-box:before {
+  content: "\e901";
+}
 .icon-lock:before {
   content: "\e900";
 }
+.icon-file-text:before {
+  content: "\e922";
+}
 .icon-user:before {
   content: "\e971";
+}
+.icon-users:before {
+  content: "\e972";
+}
+.icon-key:before {
+  content: "\e98d";
+}
+.icon-stats-bars:before {
+  content: "\e99c";
+}
+.icon-gift:before {
+  content: "\e99f";
 }
