--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,6 +1,7 @@
 html,body,#app{
     height: 100%;
     margin: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb{
@@ -8,5 +9,5 @@ html,body,#app{
 }
 
 .el-card{
-    box-shadow: 0 1px 1px rgba(0,0,0,0.15) !important
+    box-shadow: 0 1px 1px rgba(0,0,0,0.15) !important;
 }
