--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,3 +11,10 @@ html,body,#app{
 .el-card{
     box-shadow: 0 1px 1px rgba(0,0,0,0.15) !important;
 }
+
+.quill-editor {
+    min-height: 300px;
+}
+.ql-editor{
+    height: 300px !important;
+}
